fixed button alignment

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -43,6 +43,11 @@
     min-height: 100px;
 }
 
+#buttonContainer {
+    display: flex;
+    justify-content: center;
+}
+
 #submitButton {
     background-color: hsl(0, 0%, 0%);
     color: white;
@@ -50,7 +55,6 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-left: 45%;
     font-size: 1rem;
 }
 
